tests/suite/fail/generated/borrow/fail_move_use_input.ny
fn use(x: string) -> void { print(x) }
fn main() {
    let input = "hello"
    use(input)
    print(input) //~ ERROR was moved
}
